--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
 	"name": "@igor.dvlpr/str-is-in",
-	"version": "1.0.2",
-	"description": "Provides ways of checking whether a String is present in an Array of Strings using custom Comparators.",
-	"main": "index.js",
+	"version": "1.1.0",
+	"description": "🧵 Provides ways of checking whether a String is present in an Array of Strings using custom Comparators. 🔍",
+	"main": "src/str-is-in.js",
 	"files": [
-		"index.js",
-		"dist/"
+		"src",
+		"dist"
 	],
-	"types": "./dist/index.d.ts",
+	"types": "./dist/str-is-in.d.ts",
 	"scripts": {
 		"test": "mocha --slow 0",
-		"party": "npm test && npm publish --access public"
+		"pub": "npm test && tsc && npm publish --access public"
 	},
 	"repository": {
 		"type": "git",
@@ -32,9 +32,7 @@
 	},
 	"homepage": "https://github.com/igorskyflyer/npm-str-is-in#readme",
 	"devDependencies": {
-		"@types/mocha": "^8.2.3",
-		"@types/node": "^16.3.1",
 		"chai": "^4.3.4",
-		"mocha": "^9.0.2"
+		"mocha": "^9.0.3"
 	}
 }
