--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
 	"name": "@igor.dvlpr/str-is-in",
-	"version": "2.1.1",
+	"version": "2.2.0",
 	"description": "🧵 Provides ways of checking whether a String is present in an Array of Strings using custom Comparators. 🔍",
+	"type": "module",
 	"engines": {
 		"node": ">=12.17"
 	},
 	"sideEffects": false,
-	"main": "./src/index",
+	"main": "./dist/compat/index.js",
 	"exports": {
 		".": {
-			"require": "./src/index.js",
-			"import": "./src/index.mjs"
+			"require": "./dist/compat/index.js",
+			"import": "./dist/module/index.js"
 		}
 	},
-	"module": "./src/index.mjs",
-	"types": "./dist/index",
+	"module": "./dist/module/index.js",
+	"types": "./dist/types",
 	"files": [
-		"dist",
-		"src"
+		"dist"
 	],
 	"scripts": {
-		"test": "mocha --slow 0",
-		"pub": "npm test && tsc && npm publish --access public"
+		"cjs": "tsc -m CommonJS -t ES5 --outDir ./dist/compat && hybridize --out ./dist/compat --module cjs --overwrite",
+		"esm": "tsc -m ES6 -t ES6 --outDir ./dist/module",
+		"dts": "tsc --d --emitDeclarationOnly --declarationDir ./dist/types",
+		"build": "npm run cjs && npm run esm && npm run dts",
+		"test": "mocha",
+		"pub": "npm test && npm run build && npm publish --access public"
 	},
 	"repository": {
 		"type": "git",
@@ -43,6 +47,7 @@
 	},
 	"homepage": "https://github.com/igorskyflyer/npm-str-is-in#readme",
 	"devDependencies": {
+		"@igor.dvlpr/hybridize": "^1.0.0",
 		"@types/chai": "^4.2.21",
 		"@types/mocha": "^9.0.0",
 		"@types/node": "^12.17.0",
