--- a/package.json
+++ b/package.json
@@ -1,35 +1,22 @@
 {
 	"name": "@igor.dvlpr/str-is-in",
-	"version": "2.2.1",
+	"version": "3.0.0",
 	"description": "🧵 Provides ways of checking whether a String is present in an Array of Strings using custom Comparators. 🔍",
-	"type": "module",
-	"engines": {
-		"node": ">=12.17"
-	},
 	"sideEffects": false,
-	"main": "./dist/compat/index.js",
-	"exports": {
-		".": {
-			"require": "./dist/compat/index.js",
-			"import": "./dist/module/index.js"
-		}
+	"engines": {
+		"node": ">=20.0"
 	},
-	"module": "./dist/module/index.js",
-	"types": "./dist/types",
+	"types": "./dist/index.d.mts",
+	"main": "./dist/index.mjs",
+	"module": "./dist/index.mjs",
 	"files": [
 		"dist"
 	],
 	"scripts": {
-		"cjs": "tsc -m CommonJS -t ES5 --outDir ./dist/compat && hybridize --out ./dist/compat --module cjs --overwrite",
-		"esm": "tsc -m ES6 -t ES6 --outDir ./dist/module",
-		"dts": "tsc --d --emitDeclarationOnly --declarationDir ./dist/types",
-		"build": "npm run cjs && npm run esm && npm run dts",
-		"test": "mocha",
+		"build": "tsc",
+		"test": "vitest --run",
+		"debug": "vitest",
 		"pub": "npm test && npm run build && npm publish --access public"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/igorskyflyer/npm-str-is-in.git"
 	},
 	"keywords": [
 		"string",
@@ -37,22 +24,24 @@
 		"array",
 		"check",
 		"exists",
-		"igor.dvlpr",
-		"igorskyflyer"
+		"igorskyflyer",
+		"igor.dvlpr"
 	],
-	"author": "Igor Dimitrijević",
 	"license": "MIT",
+	"author": "Igor Dimitrijević <igor.dvlpr@gmail.com> (https://github.com/igorskyflyer)",
+	"funding": "https://ko-fi.com/igorskyflyer",
+	"homepage": "https://github.com/igorskyflyer/npm-str-is-in",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/igorskyflyer/npm-str-is-in.git"
+	},
 	"bugs": {
 		"url": "https://github.com/igorskyflyer/npm-str-is-in/issues"
 	},
-	"homepage": "https://github.com/igorskyflyer/npm-str-is-in#readme",
 	"devDependencies": {
-		"@igor.dvlpr/hybridize": "^1.0.0",
-		"@types/chai": "^4.3.3",
-		"@types/mocha": "^9.1.1",
-		"@types/node": "^12.17.0",
-		"chai": "^4.3.6",
-		"mocha": "^10.0.0",
-		"typescript": "^4.7.4"
+		"@biomejs/biome": "^1.8.3",
+		"@types/node": "^20.14.9",
+		"typescript": "^5.5.3",
+		"vitest": "^1.6.0"
 	}
 }
