--- a/package.json
+++ b/package.json
@@ -1,45 +1,70 @@
 {
-  "name": "@igor.dvlpr/str-is-in",
-  "version": "3.0.2",
-  "description": "🧵 Provides ways of checking whether a String is present in an Array of Strings using custom Comparators. 🔍",
-  "sideEffects": false,
-  "engines": {
-    "node": ">=20.0"
-  },
-  "types": "./dist/index.d.mts",
-  "main": "./dist/index.mjs",
-  "module": "./dist/index.mjs",
-  "files": ["dist"],
-  "scripts": {
-    "build": "tsc",
-    "test": "vitest --run",
-    "debug": "vitest",
-    "pub": "npm test && npm run build && npm publish --access public"
-  },
-  "keywords": [
-    "string",
-    "is-in",
-    "array",
-    "check",
-    "exists",
-    "igorskyflyer",
-    "igor.dvlpr"
-  ],
-  "license": "MIT",
-  "author": "Igor Dimitrijević <igor.dvlpr@gmail.com> (https://github.com/igorskyflyer)",
-  "funding": "https://ko-fi.com/igorskyflyer",
-  "homepage": "https://github.com/igorskyflyer/npm-str-is-in",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/igorskyflyer/npm-str-is-in.git"
-  },
-  "bugs": {
-    "url": "https://github.com/igorskyflyer/npm-str-is-in/issues"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "^1.8.3",
-    "@types/node": "^20.14.10",
-    "typescript": "^5.5.3",
-    "vitest": "^1.6.0"
-  }
+    "name": "@igorskyflyer/str-is-in",
+    "version": "3.1.0",
+    "description": "🧵 Provides ways of checking whether a String is present in an Array of Strings using custom Comparators. 🔍",
+    "sideEffects": false,
+    "engines": {
+        "node": ">=22.0"
+    },
+    "type": "module",
+    "types": "./dist/index.d.ts",
+    "main": "./dist/index.js",
+    "module": "./dist/index.js",
+    "files": [
+        "dist"
+    ],
+    "scripts": {
+        "build": "tsc",
+        "test": "vitest --run",
+        "pub": "pnpm test && git push origin main --tags"
+    },
+    "keywords": [
+        "string",
+        "string-search",
+        "string-compare",
+        "string-matching",
+        "string-utils",
+        "string-utility",
+        "string-helpers",
+        "array-search",
+        "array-utils",
+        "case-sensitive",
+        "case-insensitive",
+        "full-match",
+        "partial-match",
+        "substring-match",
+        "comparator",
+        "matcher",
+        "find",
+        "search",
+        "lookup",
+        "utilities",
+        "helper",
+        "typescript",
+        "javascript",
+        "igor dimitrijević",
+        "igorskyflyer"
+    ],
+    "license": "MIT",
+    "author": "Igor Dimitrijević <support@igorskyflyer.me> (https://github.com/igorskyflyer)",
+    "funding": "https://ko-fi.com/igorskyflyer",
+    "homepage": "https://github.com/igorskyflyer/npm-str-is-in",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/igorskyflyer/npm-str-is-in.git"
+    },
+    "bugs": {
+        "url": "https://github.com/igorskyflyer/npm-str-is-in/issues"
+    },
+    "devDependencies": {
+        "@biomejs/biome": "^2.2.2",
+        "@igorskyflyer/biome-config": "^2.1.0",
+        "@types/node": "^22.18.0",
+        "typescript": "^5.9.2",
+        "vitest": "^3.2.4"
+    },
+    "publishConfig": {
+        "access": "public"
+    },
+    "packageManager": "pnpm@10.15.0"
 }
